--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -16,22 +16,5 @@
   "bugs": {
     "url": "https://github.com/ahmedsat/Chat-Sat/issues"
   },
-  "homepage": "https://github.com/ahmedsat/Chat-Sat#readme",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "nodemon": "^2.0.16",
-    "typescript": "^4.7.3"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.5",
-    "swagger-ui-express": "^4.4.0",
-    "ts-node": "^10.8.1",
-    "yamljs": "^0.3.0"
-  }
+  "homepage": "https://github.com/ahmedsat/Chat-Sat#readme"
 }
